kubernetes/apps/staging/provisioner.yml
apiVersion: v1
kind: Service
metadata:
  name: game-provisioner
  namespace: default
  labels:
    app: game-provisioner
spec:
  ports:
    - name: game-provisioner
      port: 80
      targetPort: 8032
      protocol: TCP
  selector:
    app: game-provisioner
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-provisioner
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-provisioner
  template:
    metadata:
      labels:
        app: game-provisioner
    spec:
      imagePullSecrets:
      - name: zot-registry-credentials
      containers:
      - name: game-provisioner
        image: registry.rejdeboer.com/game/game-provisioner:main-74849b9-1785785131 # {"$imagepolicy": "flux-system:game-provisioner"}
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8032
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-provisioner
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: game-provisioner.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-provisioner
                port:
                  number: 80
  tls:
    - hosts:
        - game-provisioner.${DOMAIN}
